--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "@types/cors": "^2.8.7",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "mysql": "^2.18.1",
