--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,7 +6,10 @@
     "axios": "^0.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts-redux-ts": "1.2.1",
+    "redux": "^4.0.5",
     "redux-saga": "^1.0.2",
     "styled-components": "^4.2.0"
   },
@@ -30,9 +33,11 @@
     "@types/node": "^12.0.1",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.9",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^4.1.15",
     "typescript": "^3.4.5"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
